tests/snapshots/run_wpt_conformance__trtx_add_float16_large_inputs.snap
---
source: tests/run_wpt_conformance.rs
expression: "(&file_name, &test_name, &backend_prefix, err)"
---
(
    "add.https.any.js",
    "add float16 large inputs",
    "trtx",
    Failed {
        msg: Some(
            "add :: add float16 large inputs: index 0: actual=154.5 expected=166.5 ulp=96 tolerance=1\n  inputs: inputB: 77.25; inputA: 89.3125\n  expected output: [166.5, 166.5, 166.5, 166.5, 166.5, 166.5, 166.5, 166.5, 166.5, 166.5 ...] (len=36000000)\n  actual output: [154.5, 154.5, 154.5, 154.5, 154.5, 154.5, 154.5, 154.5, 154.5, 154.5 ...] (len=36000000)\n  expected output full nd:\n[166.5, 166.5, 166.5, 166.5, 166.5, 166.5, 166.5, 166.5, 166.5, 166.5, ...] (len=36000000, shape=[6000, 6000])\n  actual output full nd:\n[154.5, 154.5, 154.5, 154.5, 154.5, 154.5, 154.5, 154.5, 154.5, 154.5, ...] (len=36000000, shape=[6000, 6000])\n\n--- built graph ---\nwebnn_graph \"graph\" v2 {\n  inputs {\n    inputA: f16[6000, 6000];\n    inputB: f16[6000, 6000];\n  }\n\n  nodes {\n    [output] = add(inputA, inputB, label=\"\");\n  }\n\n  outputs { output; }\n}\n",
        ),
    },
)
